--- a/Complicated Time WatchKit App/Base.lproj/Interface.storyboard
+++ b/Complicated Time WatchKit App/Base.lproj/Interface.storyboard
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14460.31" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
-    <device id="watch38" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="15705" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch44"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14460.16"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="15501"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller fullBounds="YES" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="TimeOfDay_WatchKit_App" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="It_s_Complicated_WatchKit_App" customModuleProvider="target">
                     <items>
-                        <group width="40" height="40" alignment="center" contentMode="center" radius="20" id="k9U-LN-s6C" userLabel="TopGroup">
+                        <group width="1" alignment="center" contentMode="center" id="sR0-kh-bq1">
                             <items>
-                                <group width="32" height="32" alignment="center" verticalAlignment="center" radius="16" id="uvM-vk-VAs" userLabel="InnerGroup">
+                                <group alignment="center" verticalAlignment="center" contentMode="center" radius="6" id="xPh-Da-UC4">
                                     <items>
-                                        <label alignment="center" verticalAlignment="center" text="30" textAlignment="center" id="rOo-HT-Qsb" userLabel="DateLabel">
-                                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="font" type="system" pointSize="20"/>
+                                        <label alignment="center" verticalAlignment="center" text="30" textAlignment="center" id="L44-Qj-LZg">
+                                            <fontDescription key="font" type="system" pointSize="30"/>
                                         </label>
                                     </items>
-                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </group>
                             </items>
-                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </group>
-                        <picker height="100" alignment="left" id="sd7-GZ-7ar" userLabel="Color Picker">
+                        <picker height="100" alignment="left" id="b95-DI-1xA">
                             <connections>
-                                <action selector="colorPickerAction:" destination="AgC-eL-Hgc" id="SEX-Lm-sGt"/>
+                                <action selector="colourPickerAction:" destination="AgC-eL-Hgc" id="9uo-mQ-4Hv"/>
                             </connections>
                         </picker>
+                        <switch width="1" alignment="left" value="YES" title="Large Text" id="BOe-RX-PmV">
+                            <connections>
+                                <action selector="setLargeBezelText:" destination="AgC-eL-Hgc" id="N5J-u4-bBl"/>
+                            </connections>
+                        </switch>
                     </items>
                     <connections>
-                        <outlet property="colorPicker" destination="sd7-GZ-7ar" id="FhT-1N-jYT"/>
-                        <outlet property="dateLabel" destination="rOo-HT-Qsb" id="PDy-U5-sdc"/>
-                        <outlet property="topGroup" destination="k9U-LN-s6C" id="qj7-Xk-xVD"/>
+                        <outlet property="colourPicker" destination="b95-DI-1xA" id="EZO-D6-PGw"/>
+                        <outlet property="dateLabel" destination="L44-Qj-LZg" id="MGf-98-AXQ"/>
+                        <outlet property="outerGroup" destination="sR0-kh-bq1" id="DoT-ia-ekc"/>
                     </connections>
                 </controller>
             </objects>
+            <point key="canvasLocation" x="24.391304347826086" y="28.839285714285715"/>
         </scene>
     </scenes>
 </document>
